@@ -94,3 +94,10 @@ uint32 TIFF_WriteOverview( TIFF *, uint32, uint32, int, int, int, int, int,
     
 #endif /* ndef TIF_OVRCACHE_H_INCLUDED */
 
+/*
+ * Local Variables:
+ * mode: c
+ * c-basic-offset: 8
+ * fill-column: 78
+ * End:
+ */
