@@ -30,3 +30,10 @@ failure:
 	exit (-1);
 }
 
+/*
+ * Local Variables:
+ * mode: c
+ * c-basic-offset: 8
+ * fill-column: 78
+ * End:
+ */
