@@ -370,3 +370,10 @@ WORD DIBNumColors(LPSTR lpDIB)
       return 0;
       }
 }
+/*
+ * Local Variables:
+ * mode: c
+ * c-basic-offset: 8
+ * fill-column: 78
+ * End:
+ */
